--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>proto</module>
         <module>filter-service</module>
         <module>order-service</module>
+        <module>user-service</module>
     </modules>
     <packaging>pom</packaging>
     <name>ecommerce-microservice-project</name>
