--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>filter-service</module>
         <module>order-service</module>
         <module>user-service</module>
+        <module>cart-service</module>
     </modules>
     <packaging>pom</packaging>
     <name>ecommerce-microservice-project</name>
