--- a/product-service/pom.xml
+++ b/product-service/pom.xml
@@ -73,11 +73,16 @@
             <artifactId>spring-security-core</artifactId>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/io.github.lognet/grpc-spring-boot-starter -->
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/io.github.lognet/grpc-spring-boot-starter &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>io.github.lognet</groupId>-->
+<!--            <artifactId>grpc-spring-boot-starter</artifactId>-->
+<!--            <version>5.1.0</version>-->
+<!--        </dependency>-->
         <dependency>
-            <groupId>io.github.lognet</groupId>
-            <artifactId>grpc-spring-boot-starter</artifactId>
-            <version>5.1.0</version>
+            <groupId>net.devh</groupId>
+            <artifactId>grpc-server-spring-boot-starter</artifactId>
+            <version>2.15.0.RELEASE</version>
         </dependency>
 
         <dependency>
@@ -85,6 +90,13 @@
             <artifactId>proto</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>30.1-jre</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -115,6 +127,16 @@
             <version>0.11.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.6.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-data-rest</artifactId>
+            <version>1.6.5</version>
+        </dependency>
     </dependencies>
 
 </project>
