--- a/cart-service/pom.xml
+++ b/cart-service/pom.xml
@@ -105,6 +105,11 @@
             <artifactId>proto</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.7.0</version>
+        </dependency>
     </dependencies>
 
 </project>
