--- a/category-service/pom.xml
+++ b/category-service/pom.xml
@@ -118,7 +118,11 @@
             <version>0.11.5</version>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.7.0</version>
+        </dependency>
     </dependencies>
 
 
