--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -108,5 +108,11 @@
             <version>7.54.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>1.7.0</version>
+        </dependency>
+
     </dependencies>
 </project>
